--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
-* {
+html {
     font-family: 'Roboto', sans-serif;
+    background-color: #f5f7f8;
+}
+.band {
+    border: 2px solid red;
+    max-width: 1240px;
+    margin: 0 auto;
+    width: 90%;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+.card {
+    border: 1px solid blue;
+    display: flex;
+    flex-direction: column;
+}
+@media screen and (min-width: 500px) {
+    .band {
+        grid-template-columns: 1fr 1fr;
+
+    }
+}
+@media screen and (min-width: 850px) {
+    .band {
+        grid-template-columns: repeat(4, 1fr);
+
+    }
 }
