--- a/style.css
+++ b/style.css
@@ -15,11 +15,22 @@ html {
     border: 1px solid blue;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    text-decoration: none;
+    color: #000;
+}
+.card .thumb {
+    padding-bottom: 60%;
+    background-size: cover;
+    background-position: center center;
 }
 @media screen and (min-width: 500px) {
     .band {
         grid-template-columns: 1fr 1fr;
 
+    }
+    .item-1 {
+        grid-column: 1/3;
     }
 }
 @media screen and (min-width: 850px) {
