--- a/style.css
+++ b/style.css
@@ -20,6 +20,13 @@ h1 {
     text-decoration: none;
     color: #000;
     border: 2px solid;
+    position: relative;
+    top: 0;
+    transition: all .2s;
+}
+.card:hover {
+    top: -5px;
+    box-shadow: 2px 2px 5px #7f8c8d;
 }
 .card .thumb {
     padding-bottom: 60%;
